# penguin-command

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  penguin-command.6  penguin-command.ja.6  penguin-command.spec  penguin-command.spec.in
data/: Makefile.am  Makefile.in
macosx/: SDLMain.m  icon.icns
macosx/English.lproj/: InfoPlist.strings
macosx/Penguin-Command.xcodeproj/: karl.mode1  project.pbxproj
src/: Makefile.am  Makefile.in  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SFont.c  SFont.h  bomb.c  bomb.h  explosion.c  explosion.h  game.c  game.h  gfx.c  gfx.h  joystick.c  joystick.h  main.c  main.h  missile.c  missile.h  mouse.c  mouse.h  options.c  options.h  shot.c  shot.h  shot2.c  sound.c  sound.h  wave.c  wave.h
