bin_PROGRAMS = penguin-command

#SUBDIRS = mixer

penguin_command_SOURCES = main.c main.h \
	game.c game.h \
	gfx.c gfx.h \
	missile.c missile.h \
	shot.c shot2.c shot.h \
	explosion.c explosion.h \
	SFont.c SFont.h \
	wave.c wave.h \
	sound.c sound.h \
	bomb.c bomb.h \
	options.c options.h \
	mouse.c mouse.h \
	joystick.c joystick.h \
	SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h
